[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "This project provides tools to generate wordlists focused on common web directories and files, and to scan a target URL for hidden files and directories."
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]
